--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-<div id="app"></div>
+<html lang="pt-br">
+
+<head>
+  <meta charset="UTF-8">
+  <title>EXEMPLO</title>
+  <link rel="stylesheet" type="text/css" href="files/style.css">
+</head>
+
+<body>
+  <div id="menu">
+    <header>
+      <h1>TESTE IN CASA</h1>
+    </header>
+  </div>
+  <div class="corpo">
+    <div class="conteudo-centralizado">
+      <section id="cont-1">
+        <article>
+          <h2>
+            PROP. IN CASA
+          </h2>
+          <p>COLOCAR IMAGEM AQUI</p>
+        </article>
+      </section>
+    </div>
+    <div class="cont-2">
+      <section id="cont-2">
+        <article>
+          <h2>
+            PROP. IN CASA
+          </h2>
+          <p>COLOCAR IMAGEM AQUI</p>
+        </article>
+      </section>
+    </div>
+    <div class="cont-3">
+      <section id="cont-3">
+        <article>
+          <h2>
+            PROP. IN CASA
+          </h2>
+          <p>COLOCAR IMAGEM AQUI</p>
+        </article>
+      </section>
+    </div>
+    <div class="cont-info-1">
+      <section id="info-1">
+        <article>
+          <h2>
+            &diams; INFORMATIVOS
+          </h2>
+          <p>&rarr; <b>Dirececionar os APTS com chegadas do dia seguinte, em APTS vagos e inspecionados.</p>
+          <p>&rarr; No dia seguinte fazer conferência dos APTS e dar Check-in. Entregar kit para Concierge</p>
+          <p>&rarr;<b> Direcionar uma pessoa para entregar o kit, não sendo necessário a entrega do pager, pois os Check-in já estarâo feitors.</p>
+        </article>
+      </section>
+    </div>
+
+</body>
+
+</html>
